--- a/src/Styles/global/_boilerplate.scss
+++ b/src/Styles/global/_boilerplate.scss
@@ -20,3 +20,42 @@ body {
     margin: 0 auto !important;
     padding: 0 2.5rem !important;
 }
+
+// scroll bar ------
+
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #1261a1 #ffffff;
+  }
+  
+  /* Chrome, Edge and Safari */
+  *::-webkit-scrollbar {
+    width: 10px;
+    width: 10px;
+  }
+  *::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #ffffff;
+  }
+  
+  *::-webkit-scrollbar-track:hover {
+    background-color: #ffffff;
+  }
+  
+  *::-webkit-scrollbar-track:active {
+    background-color: #ffffff;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background-color: #1261a1;;
+  }
+  
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: #1261a1;;
+  }
+  
+  *::-webkit-scrollbar-thumb:active {
+    background-color: #1261a1;;
+  }
