--- a/src/Styles/NavbarStyles/_navbar.scss
+++ b/src/Styles/NavbarStyles/_navbar.scss
@@ -24,6 +24,13 @@
         width: 100%;
         height: 100%;
     }
+
+    @media (max-width: 800px){
+      img{
+        width: 50%;
+        height: 50%;
+    }
+    }
 }
 // Home/About etc... Styling
   &__links {
