--- a/src/Styles/NavbarStyles/_navbar.scss
+++ b/src/Styles/NavbarStyles/_navbar.scss
@@ -38,14 +38,14 @@
     gap: 2.5rem;
     list-style: none;
 
-    li {
-        font-size: $p-size;
-        font-family: $text-font;
-        font-weight: 600;
-        color: $text-black;
-        text-decoration: none;
-        cursor: pointer;
-        transition: all 0.3s;
+    a {
+      font-size: $p-size;
+      font-family: $text-font;
+      font-weight: 600;
+      color: $text-black;
+      text-decoration: none;
+      cursor: pointer;
+      transition: all 0.3s;
   
         &:hover {
           color: $text-blue;
@@ -102,5 +102,80 @@
         background-color: #1261a1;
       }
   }  
-}
+  
+  a {
+    text-decoration: none;
+   }
+ }
 }/* <=== Navbar closed */ 
+
+//  mobile nav
+
+.mobile-hamb {
+  font-size: 2.8rem;
+  display: none;
+  cursor: pointer;
+  transition: all 0.3s;
+
+  &:hover {
+    color: $text-blue;
+  }
+
+  @media (max-width: 1000px) {
+    display: flex;
+  }
+}
+
+.mobile-navbar {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  background-color: $bg-white;
+  z-index: 999999;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s ease-in-out;
+
+  &__close {
+    font-size: 3rem;
+    position: absolute;
+    top: 3.5rem;
+    right: 3.5rem;
+    cursor: pointer;
+    transition: all 0.3s;
+
+    &:hover {
+      color: $text-blue;
+    }
+  }
+
+  &__links {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    font-size: 2.3rem;
+    gap: 3rem;
+    text-align: center;
+
+    li {
+      a {
+        text-decoration: none;
+        color: $text-black;
+        font-weight: 500;
+        transition: all 0.3s;
+
+        &:hover {
+          color: $text-blue;
+        }
+      }
+    }
+  }
+}
+
+.open-nav {
+  left: 0;
+}
