Add team page and styles/ and total compiled css

--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -1,3 +1,17 @@
 @forward "../Styles/global";
 @forward "./NavbarStyles";
+@forward "./BackToTopStyles/";
 @forward "./HeroStyles/";
+@forward "./BookCarStyles/";
+@forward "./PlanTripStyles/";
+@forward "./PickCarStyles/";
+@forward "./BannerStyles/";
+@forward "./WhyChooseUsStyles/";
+@forward "./TestimonialsStyles/";
+@forward "./FaqStyles/";
+@forward "./DownloadStyles/";
+@forward "./About/";
+@forward "./ModelStyles/";
+@forward "./TeamStyles/";
+@forward "./ContactStyles/";
+@forward "./FooterStyles/";
